
----------------------------------------------------
Version 0.98
 - $date variable overflow catched
 - files dropped on application icon correctly opened when the application is not running
 - supports drag and drop of textual osc message strings
 - osc error stream normalized: the message address is 'error:' or 'warning:'
   followed by a single message string.

----------------------------------------------------
Version 0.97
 - objects position, date and watched events preserved through type change
 - bug in quantified dates corrected (null denominator set to the quantified value)
 - new 'alias' message providing arbitrary OSC addresses support
 - bug in parser corrected: \ escape only ' and " chars, otherwise it is literal
 - guido score map makes use of the new guidolib extended mapping API for staff and system
 - chords map correction (corrected by guido engine v. 1.49 - required) 

----------------------------------------------------
Version 0.96
 - switch to v8 javascript engine
 - lua not embedded by default

----------------------------------------------------
Version 0.95
- new 'mouse' 'show/hide' message supported at application level
- graphic signal supports alpha messages at object level
- javascript and lua embedded and supported in inscore scripts
- bug correction in sync delete (introduced with version 0.90)

----------------------------------------------------
Version 0.92
- bug corrected: crash with messages addressed to a signal without argument
- date and duration messages support one arg form using 1 as implicit denominator value 
  the one arg form accepts float values.

----------------------------------------------------
Version 0.91
- bug in sync management corrected (introduced with the new sync parsing scheme)

----------------------------------------------------
Version 0.90
- at application level: osc debug is now 'on' by default
- new scripting features (variables, loops)
- ITL file format change: