@@ -79,7 +79,7 @@ template<> SIObject _create<IScene>(const std::string& name , IObject* parent)
 		oscaddress += "/";
 		oscaddress += name;
 		QGraphicsScene * gscene = 0;
-		if (!parent->offscreen()) gscene = new INScoreScene(oscaddress);
+		if (!parent->offscreen()) gscene = new INScoreScene(oscaddress, obj);
 		obj->setView (new VSceneView (oscaddress, gscene));	
 	}
 	return obj->getView() ? obj : 0;
